feat: changed output of NearMachineOptimizers